<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:id="@+id/fragment_login_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="14dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="120dp"
            android:src="@drawable/location"
            android:layout_gravity="center_horizontal">

        </ImageView>


        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/ic_email"
            android:id="@+id/ti_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_input_text_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/ic_password"
            android:id="@+id/ti_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_input_text_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginBottom="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:text="@string/login_button_enter"
            android:layout_height="60dp"
            android:layout_width="match_parent">

        </com.google.android.material.button.MaterialButton>


    </LinearLayout>

</ScrollView>
